# bugsnag-vega

./: .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  jest.config.js  local-npm-config.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: node-ci.yml
dockerfiles/: Dockerfile.release
docs/: RELEASES.md
scripts/: publish-local.sh  release.sh  run-clang-format-ci-check.sh  run-clang-format.sh
test/: Gemfile  TESTING.md
test/features/: auto_breadcrumb.feature  auto_detect_errors.feature  breadcrumb.feature  console_breadcrumb_match.json  context.feature  device.feature  error_boundary.feature  feature_flags.feature  handled.feature  manual_breadcrumb.feature  metadata.feature  native.feature  native_ut.feature  navigation.feature  navigation_breadcrumbs.feature  network_breadcrumb.feature  on_error.feature  override_unhandled.feature  release_stage.feature  session.feature  unhandled.feature  user.feature
test/features/breadcrumbs/: network_breadcrumb_match.json
test/features/scripts/: build-fixture.sh
test/features/steps/: kepler_steps.rb
test/features/support/: env.rb
test/kepler-native-ut/: .npmrc  CMakeLists.txt  conanfile.py  package-lock.json  package.json  react-native.config.js
test/kepler-native-ut/kepler/: AutoLinkInit.cpp
test/kepler-native-ut/kepler/turbo-modules/: BugsnagNativeUT.cpp  BugsnagNativeUT.h
test/kepler-native-ut/src/turbo-modules/: BugsnagNativeUT.ts
test/vega-native-ut/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json
(+108 files in other folders)
